# cursor-hackathon

./: .gitignore  README.md  package.json  vercel.json
api/: app.py  pyproject.toml
frontend/: next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
